--- a/product.html
+++ b/product.html
@@ -5,27 +5,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Home Page</title>
+    <title>Products Page</title>
 </head>
 
 <body>
     <!-- Header -->
     <header>
-        <h1>Welcome to our Online Store</h1>
+        <h1>Explore Our Products</h1>
     </header>
 
     <!-- Navigation Bar -->
     <nav>
         <ul>
-            <li><a href="#index">Home</a></li>
-            <li><a href=#products">Products</a></li>
-            <li><a href="#contact">Contact Us</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="#products">Products</a></li>
+            <li><a href="contact.html">Contact Us</a></li>
         </ul>
     </nav>
 
-    <!-- Main Content - Home Page -->
-    <section class="home-page">
-        <h2>Featured Products</h2>
+    <!-- Main Content - Products Page (using display-grid) -->
+    <section class="products-page">
+        <h2>Our Product Catalog</h2>
         <!-- Display polarographs and images here -->
     </section>
 
