--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="shortcut icon" href="images/book-website-icon.png" type="image/png">
     <!--Font Awesome-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <!--JQuery-->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  
+   
 
     <title>Freedom Book Store</title>
 </head>
@@ -62,7 +62,7 @@
                 Hello! My name is Noor and I am the Owner of this virtual store. <br>
                 Do you want to get to know each other better?
             </div>
-            <a href="feedback.html">About the Owner</a>
+            <a href="contact.html">About the Owner</a>
         </div>
     </div>
     
@@ -174,9 +174,6 @@
 
     
 
-    <!--JQuery-->
-    <script src="http://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <!--JS-->
-    <script src="scripts.js"></script>
+   
 </body>
 </html>
