--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="contact.css">
     <link rel="shortcut icon" href="images/book-website-icon.png" type="image/png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>Зворотній зв'язок</title>
+    <title>Freedom Book Store</title>
 </head>
 <body>
 
@@ -124,9 +124,6 @@
         </footer>
 
 
-    <!--JQuery-->
-    <script src="http://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <!--JS-->
-    <script src="scripts.js"></script>
+   
 </body>
 </html>
