--- a/product.html
+++ b/product.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="product.css">
     <link rel="shortcut icon" href="images/book-website-icon.png" type="image/png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <title>Статті</title>
+  
+    <title>Freedom Book Store</title>
 </head>
 <body>
     <header class="header">
@@ -167,9 +167,6 @@
             </div>  
         </footer>
 
-    <!--JQuery-->
-    <script src="http://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <!--JS-->
-    <script src="scripts.js"></script>
+  
 </body>
 </html>
