--- a/product.html
+++ b/product.html
@@ -11,6 +11,7 @@
     <title>Freedom Book Store</title>
 </head>
 <body>
+    <!--Syed Noor, ID 1930146-->
     <header class="header">
         <div class="header_container">
             <div class="header__body">
