--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,7 @@
     <title>Freedom Book Store</title>
 </head>
 <body>
+    <!--Syed Noor ID 1930146-->
 
         <header class="header">
             <div class="header_container">
