--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <title>Freedom Book Store</title>
 </head>
 <body>
+
+    <!--Syed Noor, ID 1930146-->
     
     <header class="header">
         <div class="header_container">
